[package]
name = "pinetime"
version = "0.1.0"
authors = ["RegenJacob <RegenJacob@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
nrf52832-hal = "0.12.1"
cst816s = "0.1.4"
nrf52832-pac = "0.9.0"

[profile.release]
lto = true
debug = true
codegen-units = 1
